# secretapp

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.txt
.github/workflows/: python-package.yml
app/: config.py  database.py  main.py  schemas.py
app/routers/: secret.py
app/utils/: secret_utils.py
tests/: conftest.py  test_database.py
tests/test_routers/: test_secret.py
